2012-05-30  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.13.0-rc2 Released.

	* Resolve crash in subscribing for MWI notifications.

	  ASTOBJ_UNREF sets the variable to NULL after unreffing it, so the
	  variable should definitely not be used after that. To solve this in
	  the two cases that affect subscribing for MWI notifications, we
	  instead save the ref locally, and unref them in the error
	  conditions.

	  (closes issue ASTERISK-19827)
	  Reported by: B. R.
	  Review: https://reviewboard.asterisk.org/r/1940/

	* AST-2012-007

	* AST-2012-008


2012-05-03  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.13.0-rc1 Released.

2012-05-02 17:02 +0000 [r365006-365068]  Terry Wilson <twilson@digium.com>

	* main/cel.c, channels/chan_local.c: Don't leak a ref if out of
	  memory and can't link the linkedid If the ao2_link fails, we are
	  most likely out of memory and bad things are going to happen.
	  Before those bad things happen, make sure to clean up the
	  linkedid references. This patch also adds a comment explaining
	  why linkedid can't be passed to both local channel allocations
	  and combines two ao2_ref calls into 1. Review:
	  https://reviewboard.asterisk.org/r/1895/

	* main/cel.c, channels/chan_local.c: Fix a CEL LINKEDID_END race
	  and local channel linkedids This patch has the ;2 channel inherit
	  the linkedid of the ;1 channel and fixes the race condition by no
	  longer scanning the channel list for "other" channels with the
	  same linkedid. Instead, cel.c has an ao2 container of linkedid
	  strings and uses the refcount of the string as a counter of how
	  many channels with the linkedid exist. Not only does this
	  eliminate the race condition, but it also allows us to look up
	  the linkedid by the hashed key instead of traversing the entire
	  channel list. Review: https://reviewboard.asterisk.org/r/1895/

2012-05-01 23:11 +0000 [r364902]  Richard Mudgett <rmudgett@digium.com>
